--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "format": "prettier --write ."
+    "format": "prettier --write . --plugin=@prettier/plugin-php  "
   },
   "devDependencies": {
     "@inertiajs/inertia": "^0.11.0",
