--- a/.prettierignore
+++ b/.prettierignore
@@ -2,9 +2,13 @@
 /public/build
 /public/hot
 /public/storage
+public_html/storage
+public_html/hot
+public_html/build
 /storage/*.key
+bootstrap/compiled.php
+app/storage/
 /vendor
-/storage
 .env
 .env.backup
 .env.production
@@ -16,26 +20,14 @@ npm-debug.log
 yarn-error.log
 /.fleet
 /.idea
+/.vagrant
 /.vscode
-
-# Created by https://www.toptal.com/developers/gitignore/api/yarn
-# Edit at https://www.toptal.com/developers/gitignore?templates=yarn
-
-### yarn ###
-# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
-
 .yarn/*
 !.yarn/releases
 !.yarn/patches
 !.yarn/plugins
 !.yarn/sdks
 !.yarn/versions
-
-# if you are NOT using Zero-installs, then:
-# comment the following lines
-# !.yarn/cache
-
-# and uncomment the following lines
+.yarn/cache
 .pnp.*
-
-# End of https://www.toptal.com/developers/gitignore/api/yarn
+/storage/framework/views/
