--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "format": "prettier --write . --plugin=@prettier/plugin-php  "
+    "format": "prettier --write . --plugin=@prettier/plugin-php --plugin=prettier-plugin-tailwindcss"
   },
   "devDependencies": {
     "@inertiajs/inertia": "^0.11.0",
     "@inertiajs/inertia-vue3": "^0.6.0",
     "@inertiajs/progress": "^0.2.7",
+    "@mdi/font": "^7.1.96",
     "@prettier/plugin-php": "^0.19.2",
     "@tailwindcss/forms": "^0.5.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.12",
     "axios": "^1.1.2",
+    "cssnano": "^5.1.14",
     "laravel-vite-plugin": "^0.7.2",
     "lodash": "^4.17.19",
     "postcss": "^8.4.18",
@@ -21,10 +23,8 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.1",
     "vite": "^4.0.0",
-    "vue": "^3.2.41"
-  },
-  "dependencies": {
-    "cssnano": "^5.1.14",
-    "vuetify": "^3.0.6"
+    "vite-plugin-vuetify": "^1.0.1",
+    "vue": "^3.2.41",
+    "vuetify": "^3.1.0"
   }
 }
