--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,67 +1,27 @@
-# For more information: https://laravel.com/docs/sail
-version: "3"
 services:
-  laravel.test:
-    build:
-      context: ./vendor/laravel/sail/runtimes/8.1
-      dockerfile: Dockerfile
-      args:
-        WWWGROUP: "${WWWGROUP}"
-    image: sail-8.1/app
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    ports:
-      - "${APP_PORT:-80}:80"
-      - "${VITE_PORT:-5173}:${VITE_PORT:-5173}"
+  db:
+    image: mysql:latest
+    container_name: db
     environment:
-      WWWUSER: "${WWWUSER}"
-      LARAVEL_SAIL: 1
-      XDEBUG_MODE: "${SAIL_XDEBUG_MODE:-off}"
-      XDEBUG_CONFIG: "${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}"
-    volumes:
-      - ".:/var/www/html"
-    networks:
-      - sail
-    depends_on:
-      - mysql
-      - redis
-  mysql:
-    image: "mysql/mysql-server:8.0"
+      MYSQL_ROOT_PASSWORD: my_secret_password
+      MYSQL_DATABASE: laravel
+      MYSQL_USER: db_user
+      MYSQL_PASSWORD: db_user_pass
     ports:
-      - "${FORWARD_DB_PORT:-3306}:3306"
+      - "6033:3306"
+    volumes:
+      - dbdata:/var/lib/mysql
+  phpmyadmin:
+    image: phpmyadmin:latest
+    container_name: pma
+    links:
+      - db
     environment:
-      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
-      MYSQL_ROOT_HOST: "%"
-      MYSQL_DATABASE: "${DB_DATABASE}"
-      MYSQL_USER: "${DB_USERNAME}"
-      MYSQL_PASSWORD: "${DB_PASSWORD}"
-      MYSQL_ALLOW_EMPTY_PASSWORD: 1
-    volumes:
-      - "sail-mysql:/var/lib/mysql"
-      - "./vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh"
-    networks:
-      - sail
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
-      retries: 3
-      timeout: 5s
-  redis:
-    image: "redis:alpine"
+      PMA_HOST: db
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
+    restart: always
     ports:
-      - "${FORWARD_REDIS_PORT:-6379}:6379"
-    volumes:
-      - "sail-redis:/data"
-    networks:
-      - sail
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      retries: 3
-      timeout: 5s
-networks:
-  sail:
-    driver: bridge
+      - 8081:80
 volumes:
-  sail-mysql:
-    driver: local
-  sail-redis:
-    driver: local
+  dbdata:
