--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prettier/plugin-php": "^0.19.2",
     "@tailwindcss/forms": "^0.5.3",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vueup/vue-quill": "latest",
     "autoprefixer": "^10.4.12",
     "axios": "^1.1.2",
     "cssnano": "^5.1.14",
